feat(bulk-op): added minimum bulk operations
